# ai-cli-insights

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/ai_cli_insights/: __init__.py  __main__.py  analytics.py  cli.py  collector.py  config.py  extras.py  llm_analysis.py  models.py  skills.py
src/ai_cli_insights/data/: default_config.json  skill_template.md
src/ai_cli_insights/html_renderer/: __init__.py  io.py  layout.py  sections.py  shared.py
src/ai_cli_insights/narrative/: __init__.py  all.py  claude.py  codex.py  shared.py
