[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cli-insights"
version = "1.0.0"
description = "Cross-tool usage analytics for Claude Code and Codex CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ai-cli-insights contributors" }]
keywords = ["claude", "codex", "cli", "insights", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
ai-cli-insights = "ai_cli_insights.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/ai-cli-insights"
